--- a/Python Module 2 Exercises-FunmiFayese.ipynb
+++ b/Python Module 2 Exercises-FunmiFayese.ipynb
@@ -91,16 +91,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter miles driven: 20\n",
-      "Enter gallons used: 2\n",
-      "10.0\n"
+      "Enter miles driven: 10\n",
+      "Enter gallons used: 5\n",
+      "2.0\n"
      ]
     }
    ],
@@ -108,6 +108,7 @@
     "def function_1() :\n",
     "    miles_per_gallon = value / value1\n",
     "    print(miles_per_gallon)\n",
+    "    \n",
     "    \n",
     "value = int(input(\"Enter miles driven: \"))\n",
     "value1 = int(input(\"Enter gallons used: \"))    \n",
@@ -133,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -151,16 +152,19 @@
    ],
    "source": [
     "def my_function() :\n",
+    "    value = int(input(\"Enter miles driven: \"))\n",
+    "    value1 = int(input(\"Enter gallons of gas used: \"))\n",
+    "    value2 = int(input(\"Enter cost per gallon: \"))\n",
     "    miles_per_gallon = value / value1\n",
     "    total_gas_cost = float(value1 * value2)\n",
     "    cost_per_mile = float(value2 / miles_per_gallon)\n",
     "    print(\"Miles Per Gallon: \", miles_per_gallon)\n",
     "    print(\"Total Gas Cost: \", total_gas_cost)\n",
     "    print(\"Cost per Mile: \", cost_per_mile)\n",
-    "    \n",
-    "value = int(input(\"Enter miles driven: \"))\n",
-    "value1 = int(input(\"Enter gallons of gas used: \"))\n",
-    "value2 = int(input(\"Enter cost per gallon: \"))\n",
+    "    #value = int(input(\"Enter miles driven: \"))\n",
+    "    #value1 = int(input(\"Enter gallons of gas used: \"))\n",
+    "    #value2 = int(input(\"Enter cost per gallon: \"))\n",
+    "\n",
     "my_function()"
    ]
   },
@@ -208,16 +212,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the size of your shirt: small\n",
       "Default size of my shirt is:  Large , I love Python\n",
       "Medium size is:  Medium , I love Python\n",
+      "Enter the size of your shirt: small\n",
       "New size is:  small , Organic Fruits is good for you\n"
      ]
     }
@@ -230,9 +234,9 @@
     "    new_message = \"Organic Fruits is good for you\"\n",
     "    print(\"Default size of my shirt is: \", def_size, \",\", def_message)\n",
     "    print(\"Medium size is: \", med_size, \",\", def_message)\n",
+    "    new_size = input(\"Enter the size of your shirt: \")\n",
     "    print(\"New size is: \", new_size, \",\", new_message)\n",
-    "\n",
-    "new_size = input(\"Enter the size of your shirt: \")\n",
+    "    \n",
     "make_shirt()  "
    ]
   },
@@ -258,27 +262,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a number: 3\n",
-      "30\n"
+      "Enter a number: 1\n",
+      "8\n"
      ]
     }
    ],
    "source": [
     "import random as rand\n",
     "def multiply_number() :\n",
+    "    num = int(input(\"Enter a number: \"))\n",
     "    x = rand.randint(1, 10)\n",
     "    x = x*num\n",
     "    print(x)\n",
     "    return\n",
+    "   # num = int(input(\"Enter a number: \"))   \n",
     "\n",
-    "num = int(input(\"Enter a number: \"))   \n",
     "multiply_number()"
    ]
   },
@@ -344,18 +349,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a text: functions\n",
+      "Enter a text: python\n",
       "\n",
       "\n",
-      "Original Text:  functions\n",
-      "Random character:  i\n"
+      "Original Text:  python\n",
+      "Random character:  y\n"
      ]
     }
    ],
@@ -366,7 +371,7 @@
     "    orig_message = \"functions\"\n",
     "    new_message = input(\"Enter a text: \")\n",
     "    print(\"\\n\")\n",
-    "    print(\"Original Text: \", orig_message)\n",
+    "    print(\"Original Text: \", new_message)\n",
     "    new_message = random.choice(new_message)\n",
     "    print(\"Random character: \", new_message)\n",
     "    \n",
